charts/activemq/app/activemq-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    ActiveMQArtemis: activemq-broker # e1x-aao
    #application: activemq-broker-app #ex-aao-app
  name: activemq-service-global
  namespace: activemq-artemis-operator
#  ownerReferences:
#  - apiVersion: broker.amq.io/v1beta1
#    controller: true
#    kind: ActiveMQArtemis
#    name: ex-aao

spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  #- name: console-jolokia
  #  port: 8161
  #  protocol: TCP
  #  targetPort: 8161
  - name: all
    port: 61616
    protocol: TCP
    targetPort: 61616
  publishNotReadyAddresses: true
  selector:
    ActiveMQArtemis: activemq-broker #ex-aao
    #application: activemq-broker-app #ex-aao-app
  sessionAffinity: None
  type: ClusterIP
