charts/activemq/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: activemq
  namespace: activemq-artemis-operator
  annotations:
    kubernetes.io/ingress.class: nginx
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    #kubectl -n activemq-artemis-operator create secret generic artemis-console --from-literal=key1=admin --from-literal=key2=test
    #nginx.ingress.kubernetes.io/auth-secret: artemis-console-d9fm75g829
    nginx.ingress.kubernetes.io/auth-secret: artemis-console
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  #ingressClassName: nginx
  #tls:
  #  - hosts:
        - activemq.itblast.ovh
  rules:
    - host: activemq.itblast.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: activemq-broker-hdls-svc
                #name: activemq-service-global
                port:
                  #name: web
                  number: 8161
                  #number: 61616
